# Hyena-AI

./: .gitattributes  LICENSE  README.md  package-lock.json  pyproject.toml  workspace_config.json
.github/workflows/: ci.yml
.hyena/: Memories.md  Skills.md  agents.md
app/: app.py  config.py  exceptions.py
app/agents/: loop.py.backup  permission_system.py  tool_manager.py.backup
app/cli/: __init__.py  parser.py
app/config/: __init__.py  base.py
app/core/: chat.py  streaming.py
app/data/: agents.json
app/hooks/: __init__.py
app/llm/: engine.py
app/mcp/: __init__.py
app/memory/: compactor.py  extractor.py  store.py
app/models/: Hyena3-4B-Instruct-2507.Q2_K.gguf
app/plugins/: __init__.py  base.py  hooks.py  loader.py  registry.py
app/services/: __init__.py  base.py  registry.py
app/state/: __init__.py
app/tools/: __init__.py  base.py  registry.py
app/ui/: __init__.py  banner.py  console_manager.py  panels.py  permission_prompt.py  prompt.py  streaming.py  tui.py
app/utils/: common.py  logger.py  metrics.py  retry.py  terminal.py.backup
app/workspace/: manager.py  tools.py
docs/: 00-quick-start.md  01-overview.md  03-cli-commands.md  04-tools.md  05-permission-system.md  06-memory-system.md  10-deployment.md  11-development.md  13-troubleshooting.md  agent-system.md  memory-system.md
docs/api/: core-system.md
docs/architecture/: overview.md
docs/guides/: development.md
tests/: __init__.py  conftest.py  run_tests.py
tests/e2e/: test_scenarios.py
tests/integration/: __init__.py  test_workflows.py
tests/unit/: __init__.py  (+20 more)
(+109 files in other folders)
