[project]
name = "hyena"
version = "0.0.1"
description = "Tiny Hyena TUI system"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "diskcache==5.6.3",
    "jinja2==3.1.6",
    "llama-cpp-python==0.3.16",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "mdurl==0.1.2",
    "numpy==2.4.2",
    "pygments==2.19.2",
    "prompt-toolkit==3.0.48",
    "rich==14.3.2",
    "textual>=0.44.0",
    "typing-extensions==4.15.0",
]

